fix create invoice, pdf

--- a/backend/src/services/aws-ses-service/templates/send-invoice.html
+++ b/backend/src/services/aws-ses-service/templates/send-invoice.html
@@ -30,7 +30,7 @@
             EzInvoice
         </p>
         <p style="text-align:center;margin-top:0;margin-bottom:14px;font-size:14px;font-weight:400;color:#64748B;">New Invoice</p>
-        <p style="text-align:center;margin-top:0;margin-bottom:14px;font-size:14px;font-weight:400;color:#64748B;">PiBridge has sent you a new invoice</p>
+        <p style="text-align:center;margin-top:0;margin-bottom:14px;font-size:14px;font-weight:400;color:#64748B;">${params.billFrom} has sent you a new invoice</p>
         <div style="display:flex;flex:wrap;padding: 0 30px 0 30px;">
             <p style="width:100%;font-size:14px;font-weight:400;color:#64748B;">Invoice #${params.invoiceNumber}</p>
             <p style="width:100%;font-size:14px;font-weight:400;color:#64748B;">Total: ${params.amountDue} Pi</p>
