send mail if the payment is completed

--- a/backend/src/services/aws-ses-service/templates/send-invoice.html
+++ b/backend/src/services/aws-ses-service/templates/send-invoice.html
@@ -27,7 +27,7 @@
     <div class="salutation-padding"
         style="text-align: center;background:#FFFFFF;padding: 32px 40px 48px 40px;max-width: 680px; margin-right: auto; margin-left: auto;box-sizing: border-box;">
         <p style="text-align:center;font-size:22px;color: #334155;font-weight: 700;margin-top:0;margin-bottom: 19px;line-height: 25px;">
-            Ez Invoice
+            EZ Invoice
         </p>
         <p style="text-align:center;margin-top:0;margin-bottom:14px;font-size:14px;font-weight:400;color:#64748B;">${params.text_new_invoice}</p>
         <p style="text-align:center;margin-top:0;margin-bottom:14px;font-size:14px;font-weight:400;color:#64748B;">${params.username} ${params.text_sent_invoice}</p>
