--- a/backend/src/services/templatePDF.ejs
+++ b/backend/src/services/templatePDF.ejs
@@ -95,7 +95,11 @@
             <% } else if (taxType == 2) { %>
               <p><%= text_tax %>:</p>
             <% } %>
-            <% if (discount != 0) {%><p><%= text_discount %>:</p><% } %>
+            <% if (discountType == 1) { %>
+              <% if (discount != 0) {%><p><%= text_discount %> (<%= discount %>%):</p><% } %>
+            <% } else if (discountType == 2) { %>
+              <% if (discount != 0) {%><p><%= text_discount %>:</p><% } %>
+            <% } %>
             <% if (shipping != 0) {%><p><%= text_shipping %>:</p><% } %>
             <p>Total:</p>
             <% if (amountPaid != 0) {%><p><%= text_amount_paid %>:</p><% } %>
@@ -104,7 +108,7 @@
           <div style="flex: 1; text-align: right;">
             <p><%= subTotal.toFixed(2) %> Pi</p>
             <% if (taxType != 0) {%><p><%= taxType == 1 ? (subTotal * tax / 100).toFixed(2) : tax.toFixed(2) %> Pi</p><% } %>
-            <% if (discount != 0) {%><p><%= discount.toFixed(2) %> Pi</p><% } %>
+            <% if (discountType == 1) { %> <% if (discount != 0) {%><p><%= discount.toFixed(2) %> Pi</p><% } %> <% } else if (discountType == 2) { %> <% if (discount != 0) {%><p><%= (subTotal * discount / 100).toFixed(2) %> Pi</p><% } %> <% } %>
             <% if (shipping != 0) {%><p><%= shipping.toFixed(2) %> Pi</p><% } %>
             <p><%= total.toFixed(2) %> Pi</p>
             <% if (amountPaid != 0) {%><p><%= amountPaid.toFixed(2) %> Pi</p><% } %>
