change generate pdf module

--- a/backend/src/services/templatePDF.ejs
+++ b/backend/src/services/templatePDF.ejs
@@ -22,6 +22,15 @@
     }
   </style>
   <body>
+    <div style="display: flex; justify-content: space-between">
+        <div>
+          abc123
+        </div>
+        <div>
+          alo1234
+        </div>
+      </div>
+    
     <div style="display: flex; flex-direction: row;">
       <div style="flex: 1;">
         <% if (logoUrl) { %>
