--- a/backend/src/services/aws-ses-service/templates/send-invoice.html
+++ b/backend/src/services/aws-ses-service/templates/send-invoice.html
@@ -51,6 +51,6 @@
             ">${params.text_pay}</button>
         </a>
         <p style="text-align:center;margin-top:10px;margin-bottom:10px;font-size:14px;font-weight:400;color:#64748B;">${params.text_other_way}</p>
-        <a href=${params.paymentUrl} target="_blank" style="text-align:center;margin-top:0;margin-bottom:14px;font-size:14px;">${params.paymentUrlOptional}</a>
+        <a href=${params.paymentUrlOptional} target="_blank" style="text-align:center;margin-top:0;margin-bottom:14px;font-size:14px;">${params.paymentUrlOptional}</a>
     </div>
 </div>
