--- a/backend/src/services/templatePDF.ejs
+++ b/backend/src/services/templatePDF.ejs
@@ -74,8 +74,8 @@
       </tr>
       <tr style="border: none; padding: 0px;">
         <td class="first-column" style="font-weight:bold;"><%= billFrom %></td>
-        <td class="second-column" style="font-weight:bold;"><%= text_due_date %>:</td>
-        <td class="third-column" style="font-weight:bold;"><%= dueDate %></td>
+        <td class="second-column"><%= text_due_date %>:</td>
+        <td class="third-column"><%= dueDate %></td>
       </tr>
       <tr style="border: none; padding: 0px;">
         <td class="first-column"><%= text_bill_to %>:</td>
@@ -93,8 +93,8 @@
       </tr>
       <tr style="border: none;">
         <td class="first-column"></td>
-        <td class="second-column"><%= text_balance_due %>:</td>
-        <td class="third-column"><%= amountDue %> Pi</td>
+        <td class="second-column" style="font-weight:bold;" ><%= text_balance_due %>:</td>
+        <td class="third-column" style="font-weight:bold;"><%= amountDue %> Pi</td>
       </tr>
     </table>
     <table style="margin-bottom: 10px;">
