--- a/backend/src/services/aws-ses-service/templates/send-invoice-success.html
+++ b/backend/src/services/aws-ses-service/templates/send-invoice-success.html
@@ -33,7 +33,7 @@
         <p style="text-align:center;margin-top:0;margin-bottom:14px;font-size:14px;font-weight:400;color:#64748B;">${params.username} ${params.text_sent_invoice}</p>
         <div style="display:flex;flex:wrap;padding: 0 30px 0 30px;">
             <p style="width:100%;font-size:14px;font-weight:400;color:#64748B;">${params.text_invoice_no} #${params.invoiceNumber}</p>
-            <p style="width:100%;font-size:14px;font-weight:400;color:#64748B;">${params.text_invoice_total}: ${params.amountDue} Pi</p>
+            <p style="width:100%;font-size:14px;font-weight:400;color:#64748B;">${params.text_invoice_total}: ${params.amountDue} PI</p>
         </div>
     </div>
 </div>
