add tip to email

--- a/backend/src/services/aws-ses-service/templates/send-invoice-success.html
+++ b/backend/src/services/aws-ses-service/templates/send-invoice-success.html
@@ -30,10 +30,8 @@
             EZ Invoice
         </p>
         <p style="text-align:center;margin-top:0;margin-bottom:14px;font-size:14px;font-weight:400;color:#64748B;">${params.text_new_invoice}</p>
-        <p style="text-align:center;margin-top:0;margin-bottom:14px;font-size:14px;font-weight:400;color:#64748B;">${params.username} ${params.text_sent_invoice}</p>
-        <div style="display:flex;flex:wrap;padding: 0 30px 0 30px;">
-            <p style="width:100%;font-size:14px;font-weight:400;color:#64748B;">${params.text_invoice_no} #${params.invoiceNumber}</p>
-            <p style="width:100%;font-size:14px;font-weight:400;color:#64748B;">${params.text_invoice_total}: ${params.amountDue} PI</p>
-        </div>
+        <p style="text-align:center;margin-top:0;margin-bottom:14px;font-size:14px;font-weight:400;color:#64748B;">${params.username} ${params.text_sent_invoice} #${params.invoiceNumber}</p>
+        <p style="text-align:center;width:100%;font-size:14px;font-weight:400;color:#64748B;">${params.text_tip}</p>
+        <p style="text-align:center;width:100%;font-size:14px;font-weight:400;color:#64748B;">${params.text_invoice_total}: ${params.amountDue} PI</p>
     </div>
 </div>
