add text to pdf

--- a/backend/src/services/templatePDF.ejs
+++ b/backend/src/services/templatePDF.ejs
@@ -186,5 +186,17 @@
         </td>
       </tr>
     </table>
+    <p>
+      <div style="font-weight:bold;"><%= text_ship_to %>:</div>
+      <div><%= shipTo %></div>
+    </p>
+    <p>
+      <div style="font-weight:bold;"><%= text_notes %>:</div>
+      <div><%= notes %></div>
+    </p>
+    <p>
+      <div style="font-weight:bold;"><%= text_terms %>:</div>
+      <div><%= terms %></div>
+    </p>
   </body>
 </html>
