--- a/backend/src/services/templatePDF.ejs
+++ b/backend/src/services/templatePDF.ejs
@@ -188,15 +188,15 @@
     </table>
     <p>
       <div style="font-weight:bold;"><%= text_ship_to %>:</div>
-      <div><%= shipTo %></div>
+      <p><%= shipTo %></p>
     </p>
     <p>
       <div style="font-weight:bold;"><%= text_notes %>:</div>
-      <div><%= notes %></div>
+      <p><%= notes %></p>
     </p>
     <p>
       <div style="font-weight:bold;"><%= text_terms %>:</div>
-      <div><%= terms %></div>
+      <p><%= terms %></p>
     </p>
   </body>
 </html>
