add  style="word-wrap: break-word;"

--- a/backend/src/services/templatePDF.ejs
+++ b/backend/src/services/templatePDF.ejs
@@ -188,15 +188,15 @@
     </table>
     <p>
       <div style="font-weight:bold;"><%= text_ship_to %>:</div>
-      <p><%= shipTo %></p>
+      <p style="word-wrap: break-word;"><%= shipTo %></p>
     </p>
     <p>
       <div style="font-weight:bold;"><%= text_notes %>:</div>
-      <p><%= notes %></p>
+      <p style="word-wrap: break-word;"><%= notes %></p>
     </p>
     <p>
       <div style="font-weight:bold;"><%= text_terms %>:</div>
-      <p><%= terms %></p>
+      <p style="word-wrap: break-word;"><%= terms %></p>
     </p>
   </body>
 </html>
